--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "dev": "nest start --watch",
+    "debug": "nest start --debug --watch",
+    "prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "generate:module": "npx nest generate module",
-    "generate:service": "npx nest generate service",
-    "generate:resource": "npx nest generate resource",
-    "generate:filter": "npx nest generate filter"
+    "module": "npx nest generate module",
+    "service": "npx nest generate service",
+    "resource": "npx nest generate resource",
+    "filter": "npx nest generate filter",
+    "script":"ts-node ./script.ts"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
