--- a/package.json
+++ b/package.json
@@ -18,11 +18,25 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "module": "npx nest generate module",
-    "service": "npx nest generate service",
-    "resource": "npx nest generate resource",
+    "playground": "ts-node playground.ts",
+    "seed": "ts-node prisma/seed.ts",
+    "class": "npx nest generate class",
+    "config": "npx nest generate config",
+    "controller": "npx nest generate controller",
+    "decorator": "npx nest generate decorator",
     "filter": "npx nest generate filter",
-    "playground": "ts-node playground.ts"
+    "gateway": "npx nest generate gateway",
+    "guard": "npx nest generate guard",
+    "interceptor": "npx nest generate interceptor",
+    "middleware": "npx nest generate middleware",
+    "module": "npx nest generate module",
+    "pipe": "npx nest generate pipe",
+    "provider": "npx nest generate provider",
+    "resolver": "npx nest generate resolver",
+    "service": "npx nest generate service",
+    "library": "npx nest generate library",
+    "sub-app": "npx nest generate app",
+    "resource": "npx nest generate resource"
   },
   "dependencies": {
     "@fastify/static": "^6.6.1",
