--- a/package.json
+++ b/package.json
@@ -34,17 +34,18 @@
     "provider": "npx nest generate provider",
     "resolver": "npx nest generate resolver",
     "service": "npx nest generate service",
-    "library": "npx nest generate library",
-    "sub-app": "npx nest generate app",
+    "lib": "npx nest generate library",
     "resource": "npx nest generate resource"
   },
   "dependencies": {
     "@fastify/static": "^6.6.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.1.7",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.2.1",
     "@nestjs/swagger": "^6.1.4",
+    "@nestjs/websockets": "^9.2.1",
     "@prisma/client": "^4.8.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
