--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@fastify/static": "^6.6.1",
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.1.7",
@@ -49,6 +50,8 @@
     "@prisma/client": "^4.8.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "nodemailer": "^6.9.0",
+    "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.6.0"
