--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
     "seed": "ts-node prisma/seed.ts",
     "class": "npx nest generate class",
     "config": "npx nest generate config",
-    "controller": "npx nest generate controller",
-    "decorator": "npx nest generate decorator",
-    "filter": "npx nest generate filter",
-    "gateway": "npx nest generate gateway",
-    "guard": "npx nest generate guard",
-    "interceptor": "npx nest generate interceptor",
-    "middleware": "npx nest generate middleware",
-    "module": "npx nest generate module",
-    "pipe": "npx nest generate pipe",
-    "provider": "npx nest generate provider",
-    "resolver": "npx nest generate resolver",
-    "service": "npx nest generate service",
-    "lib": "npx nest generate library",
-    "resource": "npx nest generate resource"
+    "controller": "npx nest generate controller --no-spec",
+    "decorator": "npx nest generate decorator --no-spec",
+    "filter": "npx nest generate filter --no-spec",
+    "gateway": "npx nest generate gateway --no-spec",
+    "guard": "npx nest generate guard --no-spec",
+    "interceptor": "npx nest generate interceptor --no-spec",
+    "middleware": "npx nest generate middleware --no-spec",
+    "module": "npx nest generate module --no-spec",
+    "pipe": "npx nest generate pipe --no-spec",
+    "provider": "npx nest generate provider --no-spec",
+    "resolver": "npx nest generate resolver --no-spec",
+    "service": "npx nest generate service --no-spec",
+    "lib": "npx nest generate library --no-spec",
+    "resource": "npx nest generate resource --no-spec"
   },
   "dependencies": {
     "@fastify/static": "^6.6.1",
