--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "median-clone",
+  "name": "nest-prisma-swagger-template",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
+  "description": "nest prisma swagger template",
+  "author": "Evan",
+  "private": false,
   "license": "MIT",
   "scripts": {
     "build": "nest build",
@@ -50,7 +50,6 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "nodemailer": "^6.9.0",
-    "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "swagger-ui-express": "^4.6.0"
