--- a/env/.env.example
+++ b/env/.env.example
@@ -1,1 +1,6 @@
 DATABASE_URL=postgres://myuser:mypassword@127.0.0.1:5432/postgres
+# mail
+MAIL_HOST=smtp.qq.com
+MAIL_USER=email
+MAIL_PASSWORD=password
+MAIL_FROM=email
