--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
+    "handlebars": "^4.7.7",
     "nodemailer": "^6.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
