--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nestjs/core": "^9.2.1",
     "@nestjs/graphql": "^10.1.7",
     "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/websockets": "^9.2.1",
     "@prisma/client": "^4.9.0",
@@ -64,6 +65,7 @@
     "@nestjs/cli": "^9.1.8",
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.2.1",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.15",
     "@types/jest": "29.2.6",
     "@types/node": "18.11.18",
