--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   postgres:
+    container_name: postgres
     image: postgres:13.5
     restart: always
     environment:
@@ -10,5 +11,14 @@ services:
       - postgres:/var/lib/postgresql/data
     ports:
       - '5432:5432'
+
+  redis:
+    container_name: redis
+    hostname: redis
+    image: redis
+    restart: on-failure
+    ports:
+      - "6379:6379"
+
 volumes:
   postgres:
