--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/apollo": "^10.1.7",
+    "@nestjs/bull": "^0.6.2",
     "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.2.1",
@@ -50,6 +51,7 @@
     "@nestjs/websockets": "^9.2.1",
     "@prisma/client": "^4.9.0",
     "apollo-server-express": "^3.11.1",
+    "bull": "^4.10.2",
     "cache-manager": "^5.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -65,6 +67,7 @@
     "@nestjs/cli": "^9.1.8",
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.2.1",
+    "@types/bull": "^4.10.0",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.15",
     "@types/jest": "29.2.6",
