--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cache-manager": "^5.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "handlebars": "^4.7.7",
@@ -68,6 +69,7 @@
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.2.1",
     "@types/bull": "^4.10.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.15",
     "@types/jest": "29.2.6",
