--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.2.1",
+    "@nestjs/event-emitter": "^1.3.1",
     "@nestjs/graphql": "^10.1.7",
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/schedule": "^2.1.0",
