--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cache-manager": "^5.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
