--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.15",
     "@types/jest": "29.2.6",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
