--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "handlebars": "^4.7.7",
@@ -75,6 +76,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.15",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "29.2.6",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.12",
