--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@nestjs/core": "^9.2.1",
     "@nestjs/event-emitter": "^1.3.1",
     "@nestjs/graphql": "^10.1.7",
+    "@nestjs/jwt": "^10.0.1",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.4",
@@ -64,6 +66,9 @@
     "graphql-subscriptions": "^2.0.0",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.9.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "swagger-ui-express": "^4.6.0"
@@ -79,6 +84,8 @@
     "@types/express-session": "^1.17.5",
     "@types/jest": "29.2.6",
     "@types/node": "18.11.18",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
