--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "handlebars": "^4.7.7",
+    "js-yaml": "^4.1.0",
     "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
