--- a/env/.env.example
+++ b/env/.env.example
@@ -9,5 +9,6 @@ MAIL_FROM=email
 REDIS_HOST=redis
 REDIS_PORT=6379
 
-# upload
-MULTER_DEST=./uploads
+# aws (bucket中间只能用横线，不允许重名)
+AWS_BUCKET_NAME=nest-demo-bucket
+AWS_REGION=ap-northeast-1
