--- a/package.json
+++ b/package.json
@@ -71,13 +71,15 @@
     "graphql-subscriptions": "^2.0.0",
     "handlebars": "^4.7.7",
     "js-yaml": "^4.1.0",
+    "less": "^4.1.3",
     "nodemailer": "^6.9.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "swagger-ui-express": "^4.6.0"
+    "swagger-ui-express": "^4.6.0",
+    "vitepress-theme-demoblock": "^2.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.8",
