--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "@nestjs/event-emitter": "^1.3.1",
     "@nestjs/graphql": "^10.1.7",
     "@nestjs/jwt": "^10.0.1",
+    "@nestjs/mapped-types": "^1.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/platform-socket.io": "^9.2.1",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/throttler": "^4.0.0",
