--- a/env/.env.example
+++ b/env/.env.example
@@ -2,7 +2,7 @@
 DATABASE_URL=postgres://myuser:mypassword@127.0.0.1:5432/postgres
 
 # App
-DEBUG=false
+DEBUG=true
 
 # mail
 MAIL_HOST=smtp.qq.com
