--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nestjs/platform-socket.io": "^9.2.1",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.1.4",
+    "@nestjs/terminus": "^9.1.4",
     "@nestjs/throttler": "^4.0.0",
     "@nestjs/websockets": "^9.2.1",
     "@prisma/client": "^4.9.0",
