--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs --port 8080",
-    "release": "./deploy/bin/release.sh"
+    "release": "./deploy/bin/release.sh",
+    "prisma:migrate":"npx prisma migrate dev --name init",
+    "prisma:generate":"npx prisma generate",
+    "docker:build":"docker build --platform linux/amd64 -t npsg:latest ."
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
