--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -135,6 +135,10 @@ jobs:
           TAG=$(git describe --tags --abbrev=0)
           echo "New version is: ${TAG}"
           echo "TAG=${TAG}" >> ${GITHUB_OUTPUT}
+          cp ./package.json /tmp/package.json
+          sleep 1
+          cat /tmp/package.json | jq ".version = \"${TAG}\"" > ./package.json
+          rm /tmp/package.json
       
       # 安装task
       - name: 安装task
@@ -156,11 +160,14 @@ jobs:
       - name: Setup git-vertag
         run: go install github.com/kyoh86/git-vertag@latest
 
-      # 打tag
+      # 获取最新版本的下一个版本
       - name: Bump-up Semantic Version
+        id: bump_up_semantic_version
         env:
           METHOD: ${{ steps.find_semantic_version_method.outputs.METHOD }}
-        run: $(go env GOPATH)/bin/git-vertag ${{ env.METHOD }}
+        run: |
+            echo $(go env GOPATH)/bin/git-vertag ${{ env.METHOD }} >> ${GITHUB_OUTPUT}
+        
 
       # 安装nodejs依赖
       - name: 安装nodejs依赖
@@ -171,6 +178,19 @@ jobs:
           GITHUB_PAT: ${{ env.GITHUB_PAT }}
         timeout-minutes: 10
         run: yarn
+
+      # release body
+      - name: Create Release Body
+        id: release_body
+        if: ${{ steps.configure_settings.outputs.STATUS == 'success' && steps.configure_settings.outputs.RELEASE == 'release' }}
+        env:
+          GITHUB_PAT: ${{ env.GITHUB_PAT }}
+          SHA: ${{ needs.check_status.outputs.SHA }}
+        run: |
+          echo "ERROR_TEXT=Failed to prepare release body." >> ${GITHUB_ENV}
+          RELEASE_BODY_FILE_PATH=$(mktemp)
+          ${GITHUB_WORKSPACE}/.github/bin/create-release-body.sh ${{ github.repository }} ${{ env.GITHUB_PAT }} ${{ env.SHA }} ${RELEASE_BODY_FILE_PATH}
+          echo "RELEASE_BODY_FILE_PATH=${RELEASE_BODY_FILE_PATH}" >> ${GITHUB_OUTPUT}
       
       # Release
       - name: Create a Release
@@ -180,8 +200,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ env.GITHUB_PAT }}
         with:
-          tag_name: ${{ steps.find_new_tag.outputs.TAG }}
-          release_name: ${{ steps.find_new_tag.outputs.TAG }}
+          tag_name: ${{ steps.bump_up_semantic_version.outputs.TAG }}
+          release_name: ${{ steps.bump_up_semantic_version.outputs.TAG }}
           body_path: ${{ steps.release_body.outputs.RELEASE_BODY_FILE_PATH }}
           draft: false
           prerelease: false
