--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -166,8 +166,7 @@ jobs:
         env:
           METHOD: ${{ steps.find_semantic_version_method.outputs.METHOD }}
         run: |
-          new_tag = ${$(go env GOPATH)/bin/git-vertag ${{ env.METHOD }} } 
-          echo ${new_tag} >> {GITHUB_OUTPUT}      
+          $(go env GOPATH)/bin/git-vertag ${{ env.METHOD }}
 
       # 安装nodejs依赖
       - name: 安装nodejs依赖
