--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -166,7 +166,7 @@ jobs:
         env:
           METHOD: ${{ steps.find_semantic_version_method.outputs.METHOD }}
         run: |
-         echo $(go env GOPATH)/bin/git-vertag ${{ env.METHOD }} >> ${GITHUB_OUTPUT}
+         echo TAG=$(go env GOPATH)/bin/git-vertag ${{ env.METHOD }} >> ${GITHUB_OUTPUT}
 
       # 安装nodejs依赖
       - name: 安装nodejs依赖
