--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -166,8 +166,8 @@ jobs:
         env:
           METHOD: ${{ steps.find_semantic_version_method.outputs.METHOD }}
         run: |
-          TAG = ${git-vertag ${{ env.METHOD }}}
-          echo TAG= ${TAG}>> ${GITHUB_OUTPUT}
+          CURRENT_TAG=git-vertag ${{ env.METHOD }}
+          echo TAG=${CURRENT_TAG} >> ${GITHUB_OUTPUT}
 
       # 安装nodejs依赖
       - name: 安装nodejs依赖
