--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -167,13 +167,7 @@ jobs:
           METHOD: ${{ steps.find_semantic_version_method.outputs.METHOD }}
         run: |
           CURRENT_TAG=git-vertag ${{ env.METHOD }}
-          echo NEW_TAG=${CURRENT_TAG} >> ${${GITHUB_ENV}}
-
-    
-      - name: debug
-        run: |
-          echo 'start debug'
-          echo ${{ env.NEW_TAG }}
+          echo NEW_TAG=${CURRENT_TAG} >> ${GITHUB_OUTPUT}
 
       # 安装nodejs依赖
       - name: 安装nodejs依赖
@@ -184,7 +178,6 @@ jobs:
           GITHUB_PAT: ${{ env.GITHUB_PAT }}
         timeout-minutes: 10
         run: yarn
-
 
       # # release body
       # - name: Create Release Body
@@ -208,8 +201,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ env.GITHUB_PAT }}
         with:
-          tag_name: ${{ env.NEW_TAG }}
-          release_name: ${{ env.NEW_TAG }}
+          tag_name: ${{ steps.bump_up_semantic_version.outputs.NEW_TAG }}
+          release_name: ${{ steps.bump_up_semantic_version.outputs.NEW_TAG }}
           # body_path: ${{ steps.release_body.outputs.RELEASE_BODY_FILE_PATH }}
           draft: false
           prerelease: false
