--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -185,8 +185,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ env.GITHUB_PAT }}
         with:
-          tag_name: ${{ steps.find_new_tag.outputs.NEW_TAG }}
-          release_name: ${{ steps.find_new_tag.outputs.NEW_TAG }}
+          tag_name: ${{ steps.find_new_tag.outputs.TAG }}
+          release_name: ${{ steps.find_new_tag.outputs.TAG }}
           # body_path: ${{ steps.release_body.outputs.RELEASE_BODY_FILE_PATH }}
           draft: false
           prerelease: false
