--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -212,6 +212,7 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         with:
           base-image: node:16-alpine
+          platforms: linux/amd64,linux/arm64
           tags: |
             ${{ env.GITHUB_IMAGE_PROD }} ${{ env.GITHUB_IMAGE_LATEST }}
           containerfiles: |
