--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -216,7 +216,7 @@ jobs:
             ${{ env.GITHUB_IMAGE_PROD }} ${{ env.GITHUB_IMAGE_LATEST }}
           containerfiles: |
             ${{ env.CONTAINER_FILE }}
-          platforms: linux/amd64,linux/arm64
+          archs: linux/amd64,linux/arm64
 
       #  登陆到github docker
       - name: 登陆到github docker
