--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs --port 8080",
     "release": "./deploy/bin/release.sh",
-    "prisma:migrate":"npx prisma migrate dev --name init",
-    "prisma:generate":"npx prisma generate",
-    "docker:build":"docker build --platform linux/amd64 -t npsg:latest ."
+    "prisma:migrate": "npx prisma migrate dev --name init",
+    "prisma:generate": "npx prisma generate",
+    "docker:build": "docker build --platform linux/amd64 -t npsg:latest ."
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
@@ -67,7 +67,7 @@
     "@nestjs/websockets": "^9.2.1",
     "@prisma/client": "^4.9.0",
     "apollo-server-express": "^3.11.1",
-    "aws-sdk": "^2.1302.0",
+    "aws-sdk": "^2.1305.0",
     "bcrypt": "^5.1.0",
     "bull": "^4.10.2",
     "cache-manager": "^5.1.4",
@@ -83,8 +83,9 @@
     "helmet": "^6.0.1",
     "js-yaml": "^4.1.0",
     "less": "^4.1.3",
-    "nodemailer": "^6.9.0",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -104,6 +105,7 @@
     "@types/jest": "29.4.0",
     "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
@@ -111,10 +113,10 @@
     "@typescript-eslint/parser": "^5.49.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.32.0",
+    "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "29.4.0",
+    "jest": "29.4.1",
     "prettier": "^2.8.3",
     "prisma": "^4.9.0",
     "source-map-support": "^0.5.21",
@@ -123,8 +125,8 @@
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.2",
-    "typescript": "^4.9.4",
-    "vitepress": "^1.0.0-alpha.40",
+    "typescript": "^4.9.5",
+    "vitepress": "^1.0.0-alpha.43",
     "vue": "^3.2.45"
   },
   "jest": {
