feat(redis config): bull and health check

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - POSTGRES_USER=myuser
       - POSTGRES_PASSWORD=mypassword
+      - POSTGRES_DB=npsg
     volumes:
       - postgres:/var/lib/postgresql/data
     ports:
@@ -17,18 +18,21 @@ services:
     hostname: redis
     image: redis
     restart: on-failure
+    # environment:
+      # - REDIS_USER=redis
+      # - REDIS_PASSWORD=redis
     ports:
       - "6379:6379"
   
-  web:
-    container_name: web
-    hostname: npsg
-    image: ghcr.io/lantron-ltd/npsg:latest
-    restart: on-failure
-    ports:
-      - "3000:3000"
-    environment:
-      - DATABASE_URL=postgres://myuser:mypassword@postgres:5432/npsg
+  # web:
+  #   container_name: web
+  #   hostname: npsg
+  #   image: ghcr.io/lantron-ltd/npsg:latest
+  #   restart: on-failure
+  #   ports:
+  #     - "3000:3000"
+  #   environment:
+  #     - DATABASE_URL=postgres://myuser:mypassword@postgres:5432/npsg
 
 volumes:
   postgres:
