--- a/env/.env.example
+++ b/env/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL=postgres://myuser:mypassword@127.0.0.1:5432/postgres
+DATABASE_URL=postgres://myuser:mypassword@127.0.0.1:5432/npsg
 
 # App
 DEBUG=true
@@ -13,6 +13,8 @@ MAIL_FROM=email
 # redis
 REDIS_HOST=redis
 REDIS_PORT=6379
+#REDIS_USER=redis
+#REDIS_PASSWORD=redis
 
 # aws (bucket中间只能用横线，不允许重名)
 AWS_BUCKET_NAME=nest-demo-bucket
