docs(file upload and download): s3

--- a/env/.env.example
+++ b/env/.env.example
@@ -19,6 +19,8 @@ REDIS_PORT=6379
 # aws (bucket中间只能用横线，不允许重名)
 AWS_BUCKET_NAME=nest-demo-bucket
 AWS_REGION=ap-northeast-1
+AWS_ACCESS_KEY_ID=your AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY=your AWS_SECRET_ACCESS_KEY
 
 # rate limit
 RATE_TTL=60
