--- a/package.json
+++ b/package.json
@@ -98,11 +98,14 @@
     "@nestjs/schematics": "^9.0.4",
     "@nestjs/testing": "^9.2.1",
     "@types/bull": "^4.10.0",
+    "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cron": "^2.0.0",
+    "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.16",
     "@types/express-session": "^1.17.5",
     "@types/jest": "29.4.0",
+    "@types/js-yaml": "^4.0.5",
     "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
     "@types/passport-google-oauth20": "^2.0.11",
