--- a/microservices/order/package.json
+++ b/microservices/order/package.json
@@ -8,15 +8,11 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/platform-express": "^9.3.7",
     "@nestjs/swagger": "^6.2.1",
-    "@types/express": "^4.17.17",
     "aws-sdk": "^2.1312.0",
-    "express": "^4.18.2",
     "nestjs-redis": "^1.2.8",
     "stream": "^0.0.2"
   },
-  "devDependencies": {
-    "@types/multer": "^1.4.7"
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">=16.x"
   },
